--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,25 @@
+/* stylelint-disable indentation */
+
 /* Estilos generales */
 @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Spartan:wght@600;700&display=swap");
 
 :root {
-  --main-color: #012bb3;
-  --secondary-color: #fa5050;
-  --placeholder-gray: #cccaca;
+  --main-color: #230999;
+  --secondary-color: #e6a825;
+  --terciary-color: #30d0e6;
+  --cute-color: #288b99;
+  --placeholder-gray: #ccc;
   --subtitle-color: #405161;
+  --action-color: #e61980;
   --title-font: "Spartan", sans-serif;
   --text-font: "Nunito", sans-serif;
 }
+
+/* @define-mixin flex-center $justify: center, $align: center {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+} */
 
 body {
   margin: 0;
@@ -23,154 +34,145 @@ a {
 
 .header-container {
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  border-bottom: 1px solid var(--placeholder-gray);
-}
-
-.logo-container {
-  /* stylelint-disable-next-line length-zero-no-unit */
-  margin: 8px 0px 4px 8px;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 95%;
 }
 
 .logo {
-  max-width: 12%;
-}
-
-.link-container {
-  width: 20%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.contact-link {
-  font-family: var(--text-font);
-  font-size: 1.125rem;
-  color: var(--secondary-color);
-  transition: all 200ms;
-  align-self: center;
-}
-
-.contact-link:hover {
-  border-bottom: 2px solid var(--subtitle-color);
-}
-
-.shop-btn {
-  font-size: 1.125rem;
-  font-family: Arial, Helvetica, sans-serif;
-  border: 2px solid var(--subtitle-color);
-  background-color: #fff;
-  padding: 8px 16px;
-  border-radius: 32px;
-  transition: all 200ms;
-}
-
-.shop-btn:hover {
-  background-color: var(--secondary-color);
-  border: 2px solid var(--secondary-color);
-}
-
-.shop-link {
-  color: var(--subtitle-color);
-}
-
-.shop-link:hover {
-  color: #fff;
-}
-
-.hero-container {
-  background-repeat: no-repeat;
-  height: 700px;
-  display: flex;
-}
-
-.hero-title {
-  font-family: var(--title-font);
-  font-size: 1.75rem;
-  margin-top: 2rem;
+  max-width: 50px;
+  margin-top: 5px;
 }
 
 .flex {
   display: flex;
 }
 
+.contact-link {
+  font-family: var(--text-font);
+  font-size: 1.125rem;
+  color: var(--main-color);
+  align-self: center;
+  font-weight: 900;
+  transition: all 200ms;
+  margin-right: 0.75rem;
+}
+
+.contact-link:hover {
+  border-bottom: 2px solid var(--subtitle-color);
+}
+
+.btn {
+  font-size: 1.125rem;
+  font-family: var(--text-font);
+  border: 2px solid var(--action-color);
+  background-color: #fff;
+  padding: 6px 12px;
+  border-radius: 32px;
+  transition: all 200ms;
+}
+
+form .btn {
+  margin-top: 1rem;
+}
+
+.btn:hover {
+  background-color: var(--action-color);
+}
+
+.btn a {
+  color: var(--action-color);
+}
+
+.btn a:hover {
+  color: #fff;
+}
+
 .hero-section {
-  background-color: #eee;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  height: 75vh;
+  border-top: 1px solid var(--placeholder-gray);
+  padding: 1rem;
+  background: linear-gradient(
+    145deg,
+    #fff 46%,
+    var(--action-color) 46% 47%,
+    #fff 47% 100%
+  );
 }
 
 .hero-text {
-  background-image: url("assets/img-form.png");
-  background-repeat: no-repeat;
-  width: 55%;
+  margin: 1rem;
+  margin-bottom: 2rem;
+  color: var(--subtitle-color);
+  text-align: center;
 }
 
-.white-space {
-  width: 50%;
+.hero-title {
+  font-family: var(--title-font);
+  font-size: 1.75rem;
+  margin: 0;
 }
 
 .hero-subtitle {
-  width: 50%;
-  justify-self: center;
-  margin-top: 5rem;
+  margin-top: 2rem;
   font-family: var(--text-font);
-  font-size: 1.25rem;
-}
-
-.hero-form {
-  width: 50%;
+  font-size: 1.15rem;
 }
 
 .form-container {
-  align-self: center;
-  border: 2px solid white;
-  box-shadow: 2px 2px 20px rgb(199, 199, 199);
+  border: 2px solid #fff;
+  /* stylelint-disable-next-line color-function-notation */
+  box-shadow: 2px 2px 20px #c7c7c7;
   border-radius: 8px;
-  padding: 1rem;
+  padding: 1.5rem;
   font-family: var(--text-font);
   background-color: #fff;
 }
 
-.name-field,
-.user-field,
-.email-field,
-.message-field,
-.terms-field {
+label {
+  font-size: 14px;
+}
+
+input,
+textarea {
   margin-bottom: 1rem;
+  box-sizing: border-box;
 }
 
 .input {
   border-radius: 5px;
-  border: 1px solid gray;
+  border: 2px solid var(--main-color);
   line-height: 1.5rem;
   padding-left: 4px;
   width: 100%;
 }
 
+.conditions-link {
+  color: var(--cute-color);
+}
+
 .info-contenedor {
   background-color: var(--secondary-color);
-  height: 30vh;
+  padding: 1rem;
 }
 
 .card-container {
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
 }
 
 .card-value {
-  margin: 1.5rem;
-  background-color: aliceblue;
+  margin: 1rem;
+  background-color: #fff;
   border-radius: 8px;
-  padding: 0 1.5rem;
+  padding: 1.25rem;
   text-align: center;
 }
 
 .card-title {
   font-family: var(--title-font);
   font-weight: bold;
+  margin-top: 1rem;
 }
 
 .card-text {
@@ -178,117 +180,337 @@ a {
 }
 
 .product-section {
-  background-color: #ffffff;
-  opacity: 0.8;
-  background: radial-gradient(
-      circle,
-      transparent 20%,
-      #ffffff 20%,
-      #ffffff 80%,
-      transparent 80%,
-      transparent
-    ),
-    radial-gradient(
-        circle,
-        transparent 20%,
-        #ffffff 20%,
-        #ffffff 80%,
-        transparent 80%,
-        transparent
-      )
-      25px 25px,
-    linear-gradient(#cccaca 2px, transparent 2px) 0 -1px,
-    linear-gradient(90deg, #cccaca 2px, #ffffff 2px) -1px 0;
-  background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
+  background: linear-gradient(145deg, var(--terciary-color) 60%, #fff 60% 100%);
 }
 
 .product-container {
-  padding: 2rem 0;
+  width: 95%;
+  padding: 1rem;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
+.card-product {
+  border-radius: 8px;
+  background-color: #fff;
+  margin-top: 1rem;
+}
+
+/* .card-product + .card-product {
+  margin-left: 2rem;
+} */
+
 .product-img {
-  width: 40%;
+  width: 30%;
+  height: 35%;
+  align-self: center;
   border-radius: 8px;
   margin: 8px;
 }
 
-.card-product {
-  width: 45%;
-  /* border: 2px solid gold; */
-  border-radius: 8px;
-  background-color: rgb(243, 243, 243);
-}
-
-.card-product + .card-product {
-  margin-left: 2rem;
-}
-
-.product-row {
+/* .product-row {
   justify-content: center;
   align-items: center;
-}
+} */
 
-.product-row + .product-row {
+/* .card-product + .card-product {
   margin-top: 2rem;
-}
+} */
 
 .product-description {
-  padding: 0 1rem;
+  padding: 1rem;
+  font-family: var(--text-font);
+  background-color: #f3f3f3;
+  border-radius: 0 8px 8px 0;
 }
 
 .product-title {
   font-family: var(--title-font);
+  margin: 0;
+  font-size: 1em;
 }
 
-.product-description {
-  font-family: var(--text-font);
-}
-
-.product-btn {
+.product-text {
+  font-size: 14px;
 }
 
 /* seccion donde encontrarnos */
 
 .social-container {
-  background-color: rgb(243, 243, 243);
-  clip-path: polygon(0 0, 100% 0%, 100% 83%, 50% 100%, 0 86%);
+  background-color: #f3f3f3;
+  padding: 1rem;
 }
 
-.contenedor-contact {
-  padding-bottom: 4rem;
-  justify-content: space-evenly;
-  margin: auto;
+.rrss-container {
+  margin: 1rem;
+  margin-bottom: 2rem;
 }
 
-.info-contact > h3 {
+.title-contact {
   font-family: var(--title-font);
+  color: var(--subtitle-color);
   font-size: 1.75rem;
+  text-align: center;
+  margin: 1rem;
 }
 
-.map-contact {
+.icon-container {
+  margin: 0 auto;
+  display: flex;
   width: 70%;
-  border: 1px solid var(--placeholder-gray);
-  border-radius: 8px;
-  box-shadow: 2px 2px 20px rgb(199, 199, 199);
+  justify-content: space-around;
+}
+
+.rrss-icon {
+  font-size: 2.5rem;
+  color: var(--main-color);
+}
+
+.contact-container {
+  padding-bottom: 1rem;
+  justify-content: space-evenly;
+  margin: 1rem;
+}
+
+.contact-icon {
+  color: var(--action-color);
+  font-size: 1.5rem;
+  margin-right: 1rem;
 }
 
 .list-contact {
   list-style: none;
-  line-height: 4rem;
+  line-height: 3.5rem;
   font-family: var(--text-font);
-  font-size: 1.25rem;
+  font-size: 1rem;
+  padding: 1rem;
 }
 
-.contact-icon {
-  color: #fa5050;
-  font-size: 2rem;
-  margin-right: 2rem;
-}
-
-.rrss {
-  padding-top: 2rem;
-  margin-bottom: 2rem;
-  font-size: 50px;
+.map-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+}
+
+.map {
+  border: 1px solid var(--placeholder-gray);
+  border-radius: 8px;
+  height: 30vh;
+  box-shadow: 2px 2px 10px #c7c7c7;
+}
+
+footer {
+  padding: 1rem;
+}
+
+.footer-container {
+  background-color: var(--action-color);
+}
+
+.link-container {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 1rem;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.footer-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-flex a {
+  padding-left: 1rem;
+}
+
+.footer-title {
+  color: #fff;
+  font-family: var(--title-font);
+  margin-left: 1rem;
+}
+
+.footer-rights {
+  font-family: var(--text-font);
+  color: #fff;
+  margin-left: 0.5rem;
+  text-align: center;
+  font-size: 14px;
+}
+
+.footer-list {
+  list-style: none;
+  text-align: center;
+  font-family: var(--text-font);
+  margin: 0;
+  padding: 0;
+}
+
+.footer-link {
+  margin-bottom: 0.5rem;
+}
+
+.footer-link a {
+  color: var(--action-color);
+}
+
+hr {
+  display: none;
+}
+
+/* Media query */
+
+@media (min-width: 550px) {
+  .form-container {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .list-contact {
+    text-align: center;
+  }
+}
+
+@media (min-width: 700px) {
+  .hero-section {
+    background: linear-gradient(145deg, #fff 46%, var(--action-color) 46% 100%);
+  }
+
+  .hero-subtitle {
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 1rem;
+  }
+
+  .form-container {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .contact-container {
+    display: flex;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .link-container {
+    width: 30%;
+  }
+}
+
+@media (min-width: 900px) {
+  .hero-section {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .hero-text {
+    margin-top: 2.5rem;
+    width: 50%;
+  }
+
+  .hero-subtitle {
+    margin-top: 2rem;
+  }
+
+  .form-container {
+    width: 30%;
+    margin: 4rem 0 2rem;
+  }
+
+  .card-container {
+    display: flex;
+  }
+
+  .product-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .card-product {
+    margin: 0.75rem;
+  }
+
+  .product-img {
+    height: 95%;
+    width: 40%;
+  }
+
+  .rrss-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .title-contact {
+    width: 60%;
+    text-align: left;
+    margin-left: 0;
+  }
+
+  hr {
+    display: block;
+    margin-bottom: 2rem;
+  }
+
+  .list-contact {
+    text-align: left;
+  }
+
+  .rrss-container,
+  .contact-container {
+    width: 80%;
+    margin: 0 auto;
+    justify-content: space-between;
+  }
+
+  .map {
+    width: 400px;
+  }
+
+  .link-container {
+    display: flex;
+    width: 70%;
+    background: none;
+    justify-content: space-around;
+  }
+
+  .footer-container {
+    align-items: center;
+  }
+
+  .footer-flex {
+    flex-wrap: wrap;
+  }
+
+  .desktop-bg {
+    background-color: #fff;
+    padding: 2rem 3rem 1rem;
+    border-radius: 8px;
+  }
+
+  .footer-link {
+    margin-bottom: 1rem;
+  }
+}
+
+@media (min-width: 1150px) {
+  .rrss-container,
+  .contact-container {
+    width: 55%;
+    margin: 1.5rem auto;
+    justify-content: space-between;
+  }
+
+  .contact-container {
+    justify-content: center;
+  }
+
+  .link-container {
+    width: 40%;
+  }
 }
